src/test/ui/unevaluated_fixed_size_array_len.stderr
error[E0277]: the trait bound `[(); 0]: Foo` is not satisfied
  --> $DIR/unevaluated_fixed_size_array_len.rs:12:5
   |
LL |     <[(); 0] as Foo>::foo()
   |     ^^^^^^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `[(); 0]`
   |
   = help: the following implementations were found:
             <[(); 1] as Foo>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
